Change image source

--- a/FB data challenge.ipynb
+++ b/FB data challenge.ipynb
@@ -757,8 +757,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"3\">Below is an image showing areas representing different zipcodes. Having a map will assist in explaining the locations and zipcodes I'm presenting.</font>\n",
-    "<img src=\"https://github.com/melodyfs/FB-Data-Challenge/blob/master/zipcodes.png\", width=\"600\" height=\"700\">"
+    "<font size=\"3\">Below is an image showing areas representing different zipcodes. Having a map will assist in explaining the locations and zipcodes I'm presenting.</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](https://github.com/melodyfs/FB-Data-Challenge/blob/master/zipcodes.png \"Logo Title Text 1\")"
    ]
   },
   {
